--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "aes-js": "^3.1.2",
     "moment": "^2.24.0",
     "react": "16.8.6",
     "react-native": "0.60.5",
