--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "aes-js": "^3.1.2",
+    "crypto-js": "^3.1.9-1",
     "moment": "^2.24.0",
+    "randomstring-promise": "0.0.2",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-sha256": "^1.3.6",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.12.1",
     "react-navigation-redux-helpers": "^3.0.2",
