--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "aes-js": "^3.1.2",
     "crypto-js": "^3.1.9-1",
+    "jsencrypt": "^3.0.0-rc.1",
     "moment": "^2.24.0",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-sha256": "^1.3.6",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^7.0.5",
     "react-navigation": "^3.12.1",
     "react-navigation-redux-helpers": "^3.0.2",
     "react-redux": "^7.1.1",
