--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "crypto-js": "^3.1.9-1",
     "jsencrypt": "^3.0.0-rc.1",
     "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
