--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.60.5",
     "react-native-device-info": "^3.1.4",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-i18n": "^2.0.15",
     "react-native-sha256": "^1.3.6",
     "react-native-textarea": "^1.0.3",
     "react-native-vector-icons": "^6.6.0",
