--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-device-info": "^3.1.4",
+    "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-i18n": "^2.0.15",
     "react-native-sha256": "^1.3.6",
