--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-native": "0.60.5",
+    "react-native-datepicker": "^1.7.2",
     "react-native-device-info": "^3.1.4",
     "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "^1.4.1",
